--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
     <header>
         <img src="cabeçalho.png">
     </header>
+    <h1>Introdução</h1>
+    <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
+    <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
+    <p>Natural Guide, oferecemos dicas, orientações e informações</p>
+    <p>essenciais para ajudar você a cuidar do seu animal de estimação</p>
+    <p>da melhor forma possível.</p>
+    <p> Nosso objetivo é ser o seu guia confiável, trazendo conteúdos sobre</p>
+    <p>alimentação, saúde, higiene, treinamento e muito mais. Se você</p>
+    <p>está buscando conselhos sobre como lidar com um comportamento</p>
+    <p>novo, como escolher o melhor produto para seu pet ou até mesmo</p>
+    <p>como manter seu amigo saudável e feliz, nós temos tudo o que você</p>
+    precisa.
+Explore nossos artigos e tutoriais, e descubra como oferecer uma vida plena e saudável para o seu companheiro, seja ele um cão, gato, pássaro ou qualquer outro animal de estimação.
+Junte-se a nossa comunidade e vamos fazer do cuidado com os pets uma experiência mais gratificante para todos!
 </body>
 </html>
