--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <p>está buscando conselhos sobre como lidar com um comportamento</p>
     <p>novo, como escolher o melhor produto para seu pet ou até mesmo</p>
     <p>como manter seu amigo saudável e feliz, nós temos tudo o que você</p>
-    precisa.
-Explore nossos artigos e tutoriais, e descubra como oferecer uma vida plena e saudável para o seu companheiro, seja ele um cão, gato, pássaro ou qualquer outro animal de estimação.
-Junte-se a nossa comunidade e vamos fazer do cuidado com os pets uma experiência mais gratificante para todos!
+    <p>precisa.</p>
+    <p>Explore nossos artigos e tutoriais, e descubra como oferecer uma</p>
+    <p>vida plena e saudável para o seu companheiro, seja ele um cão,</p>
+    <p>gato, pássaro ou qualquer outro animal de estimação.</p>
+    <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
+    <p>uma experiência mais gratificante para todos!</p>
 </body>
 </html>
