--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="cabeçalho.png">
     </header>
+    <div id="paragrafo1">
     <h1>Introdução</h1>
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
@@ -26,5 +28,6 @@
     <p>gato, pássaro ou qualquer outro animal de estimação.</p>
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
+    </div>
 </body>
 </html>
