--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <img src="cabeçalho.png">
     </header>
-    <div id="paragrafo1">
     <h1>Introdução</h1>
+    <body class="texto fonte">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
@@ -31,6 +31,6 @@
     <p>gato, pássaro ou qualquer outro animal de estimação.</p>
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
-    </div>
+    </body>
 </body>
 </html>
