--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <img src="cabeçalho.png">
     </header>
-    <h1>Introdução</h1>
-    <body class="texto fonte">
+    <h1 class="fonte fonte-grande sublinhado cor">Introdução</h1>
+    <body class="texto fonte espaçamento1 borda">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
