--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img src="cabeçalho.png">
     </header>
-    <h1 class="fonte fonte-grande sublinhado cor">Introdução</h1>
+    <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <body class="texto fonte espaçamento1 borda">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
