--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="cabeçalho.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
-    <body class="texto fonte espaçamento1 borda">
+    <body class="texto fonte espaçamento1">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
