--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
+    <img src="bichos.png">
 </body>
 </html>
