--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Natural Guide</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
    </head>
 <body>
     <header>
-        <img src="cabeçalho.png">
+        <img src="Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <body class="texto fonte espaçamento1">
