--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <p>uma experiência mais gratificante para todos!</p>
     </body>
     <img src="bichos.png">
+    <img src="barra_lateral_ver.png" float:right>
+    <img src="barra_lateral_ver.png" float:left>
 </body>
 </html>
