--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
    </head>
 <body>
     <header>
-        <img src="Group 3.png">
+        <img src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
+    <img src="img/barra_lateral_ver.png">
     <body class="texto fonte espaçamento1">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
@@ -32,7 +33,8 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
-    <img src="bichos.png">
+    <img src="img/barra_lateral_ver.png">
+    <img src="img/bichos.png">
 
 </body>
 </html>
