--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap" rel="stylesheet">
-   </head>
+</head>
 <body>
     <header>
         <img src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
+    <section class="flex container">
+        <img src="img/barra_lateral_ver.png">
     <body class="texto fonte espaçamento1">
     <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
@@ -32,7 +34,8 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
+    <img src="img/barra_lateral_ver.png">
+    </section>
     <img src="img/bichos.png">
-
 </body>
 </html>
