--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="flex container">
         <img src="img/barra_lateral_ver.png">
     <body class="texto fonte espaçamento1">
-    <p> Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
+    Se você é apaixonado por pets e quer garantir o bem-estar do seu
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
     <p>essenciais para ajudar você a cuidar do seu animal de estimação</p>
