--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <img src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
-    <section class="flex container">
-        <img src="img/barra_lateral_ver.png">
-    <body class="texto fonte espaçamento1">
-    Se você é apaixonado por pets e quer garantir o bem-estar do seu
+        <img src="img/barra_lateral_ver.png" class="flex container">
+    <body class="texto fonte espaçamento1 flex container">
+    <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
     <p>essenciais para ajudar você a cuidar do seu animal de estimação</p>
@@ -34,8 +33,7 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
-    <img src="img/barra_lateral_ver.png">
-    </section>
+    <img src="img/barra_lateral_ver.png" class="flex container">
     <img src="img/bichos.png">
 </body>
 </html>
