--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
         <img src="img/barra_lateral_ver.png" class="flex">
-    <body class="texto fonte espaçamento1">
+    <body class="texto fonte espaçamento1 flex">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
