--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <img src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
-    <body class="texto fonte espaçamento1 container">
+    <img src="img/barra_lateral_ver.png" class="container flex">
+    <body class="texto fonte espaçamento1 container flex">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
@@ -32,6 +33,7 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
-    <img src="img/bichos.png">
+    <img src="img/barra_lateral_ver.png" class="container flex">
+    <img src="img/bichos.png" class="fixo">
 </body>
 </html>
