--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <body class="texto fonte espaçamento1 container flex">
+        <img src="img/barra_lateral_ver.png">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
@@ -31,6 +32,7 @@
     <p>gato, pássaro ou qualquer outro animal de estimação.</p>
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
+    <img src="img/barra_lateral_ver.png">
     </body>
     <img src="img/bichos.png">
 </body>
