--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <img src="img/barra_lateral_ver.png">
-    <body class="texto fonte espaçamento1 container flex">
+    <body class="texto fonte espaçamento1 container" class="flex">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
@@ -33,7 +33,7 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
-    <img src="img/barra_lateral_ver.png">
+    <img src="img/barra_lateral_ver.png" class="flex">
     <img src="img/bichos.png">
 </body>
 </html>
