--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="img/Group 3.png">
+        <img id="cabeçalho" src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <body class="texto fonte espaçamento1">
@@ -32,6 +32,6 @@
     <p>Junte-se a nossa comunidade e vamos fazer do cuidado com os pets</p>
     <p>uma experiência mais gratificante para todos!</p>
     </body>
-    <img src="img/bichos.png">
+    <img id=bichos src="img/bichos.png">
 </body>
 </html>
