--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders:opsz,wght@10..72,100..900&display=swap" rel="stylesheet">
 </head>
-<body class="fundo">
+<body>
     <header>
         <img id="cabeçalho" src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
-    <body class="texto fonte espaçamento1">
+    <body class="texto fonte espaçamento1 fundo">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
