--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img id="cabeçalho" src="img/Group 3.png">
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
-    <img src="img/barra_lateral_ver.png">
+    <img src="img/barra_lateral_ver.png" class="flex margem">
     <body class="texto fonte espaçamento1 fundo flex container">
     <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
