--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <h1 class="fonte fonte-grande sublinhado cor">Bem Vindo!</h1>
     <body class="texto fonte espaçamento1 fundo">
-    <p>Se você é apaixonado por pets e quer garantir o bem-estar do seuL</p>
+    <p>Se você é apaixonado por pets e quer garantir o bem-estar do seu</p>
     <p>amigo peludo, com penas ou escamas, você está no lugar certo! No</p>
     <p>Natural Guide, oferecemos dicas, orientações e informações</p>
     <p>essenciais para ajudar você a cuidar do seu animal de estimação</p>
